--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -18,5 +18,6 @@ jobs:
           TF_ACC: 1 # It runs the integration test through the cassettes and not with real API calls
           TF_TEST_DOMAIN: scaleway-terraform.com
           TF_UPDATE_CASSETTES: false
+          TF_TEST_DOMAIN_ZONE: tf
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
