--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -13,6 +13,11 @@ jobs:
         with:
           go-version: '1.18'
       - name: Run coverage
-        run: go test -race -coverprofile=coverage.out -covermode=atomic ./...
+        run: go test -v -timeout=2h -coverprofile=coverage.out -covermode=count ./...
+        env:
+          TF_ACC: 1 # It runs the integration test through the cassettes and not with real API calls
+          TF_TEST_DOMAIN: scaleway-terraform.com
+          TF_UPDATE_CASSETTES: false
+          TF_TEST_DOMAIN_ZONE: tf
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
